<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hemme</string>
    <string name="title_clinicalevent_detail">Dettagli</string>
    <string name="app_welcome_message">Benvenuti in Hemme</string>
    <string name="login">Login</string>
    <string name="registration">Registrati</string>
    <string name="password_forget">Recupera password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="email">Email</string>
    <string name="role">Ruolo</string>
    <string name="new_clinicalevent_label">Nuovo Evento Clinico</string>
    <string name="data">Data</string>
    <string name="therapy_label">Terapia</string>
    <string name="note">Note</string>
    <string name="note_label">Note</string>
    <string name="insert_label">Inserisci</string>

    <!-- DOCUMENT -->
    <string name="new_document_label">Nuovo Documento</string>
    <string name="filename_label">File</string>
    <string name="upload_label">Scegli il file</string>
    <string name="note_label_document">Note</string>
    <string name="document_button">Carica file</string>
    <string name="title_activity_new__document">Nuovo Evento Clinico</string>
    <string name="action_settings">Impostazioni</string>
    <string name="clinicalfolder_label">Cartella Clinica</string>
    <string name="title_test_list">Risultati</string>
    <string name="title_test_detail">Dettagli</string>
    <string name="test_label">Memory</string>
    <string name="new_result_label">Nuovo Risultato</string>
    <string name="grade_label">Difficolta\</string>
    <string name="time">Tempo</string>
    <string name="date">Data</string>

    <!-- GAME -->
    <string name="difficulty_title">Difficolta\'</string>
    <string name="new_game_label">Nuova partita</string>

    <array name="difficulty">
        <item>Facile (2 coppie)</item>
        <item>Facile (3 coppie)</item>
        <item>Medio (4 coppie)</item>
        <item>Medio (5 coppie)</item>
        <item>Difficile (6 coppie)</item>
        <item>Difficile (7 coppie)</item>
        <item>Difficile (9 coppie)</item>
    </array>

    <string name="game_grade_easy">Facile (4 carte)</string>
    <string name="game_grade_easyMedium">Facile (6 carte)</string>
    <string name="game_grade_medium">Medio (8 carte)</string>
    <string name="game_grade_mediumHard">Medio (10 carte)</string>
    <string name="game_grade_hard">Difficile (12 carte)</string>
    <string name="game_grade_hardPlus">Difficile (14 carte)</string>
    <string name="game_grade_hardPlusPlus">Difficile (18 carte)</string>
    <string name="title_activity_diary">Diario</string>
    <string name="clinicalfolder_title_therapy">Terapia</string>
    <string name="clinicalfolder_title_note">Note</string>
    <string name="nome_label">Mi chiamo</string>
    <string name="indirizzo_label">abito in via</string>
    <string name="numerotelefono_label">in caso di necessità chiamate il numero</string>
    <string name="patient_details">Informazioni</string>
    <string name="nome_preference">nome_preference</string>
    <string name="indirizzo_preference">indirizzo_preference</string>
    <string name="numerotelefono_preference">numerotelefono_preference</string>
    <string name="title_activity_maps">Mappa</string>
    <string name="manage_devices_button"> Manage Devices </string>
    <string name="title_activity_manage__devices">Manage_Devices</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_associa__dispositivi">Associa Dispositivi</string>
    <string name="search_hint">Cerca</string>
    <string name="logout">Esci</string>
    <string name="manage_devices_title">Associa un medico ai tuoi pazienti</string>
    <string name="doctor">SELEZIONA DOTTORE</string>
    <string name="patient">SELEZIONA PAZIENTE</string>
    <string name="confirm">Conferma</string>
    <string name="imposta_range">Imposta Range Paziente</string>
    <string name="doctor_patient_list">Pazienti già associati:</string>
    <string name="registrazione">Registrazione</string>

</resources>
