<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_clinicalevent_label"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/therapy_label"
            android:id="@+id/therapy_textview" />

        <EditText
            android:id="@+id/therapy_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="8"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/note_label"
            android:id="@+id/note_textview" />

        <EditText
            android:id="@+id/note_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="8"/>

    </LinearLayout>

    <Button
        android:id="@+id/insert_new_clinicalevent_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_label"/>

</LinearLayout>