<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.povodev.hemme.android.activity.Associa_Dispositivi">

    <TextView
        android:id="@+id/text_tile_associa"
        style="?android:attr/textAppearanceMedium"
        android:text="@string/manage_devices_title"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_tile_doctor"
        android:text="@string/doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/text_tile_associa"/>

    <Spinner
        android:id="@+id/spinner_medici"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_tile_doctor"/>

    <TextView
        android:id="@+id/text_tile_paziente"
        android:text="@string/patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/spinner_medici"/>

    <Spinner
        android:id="@+id/spinner_pazienti"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_tile_paziente"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_pazienti"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:background="@drawable/button_selector"
        android:text="@string/confirm"/>

    <TextView
        android:id="@+id/title_doctor_patient_list"
        android:text="@string/doctor_patient_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="?android:attr/textAppearanceMedium"
        android:layout_below="@id/confirm_button"/>

    <ListView
        android:id="@+id/patient_doctor_list"
        android:layout_marginTop="8dp"
        android:layout_below="@id/title_doctor_patient_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>
