<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/new_document_title"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_document_label"
        android:fontFamily="sans-serif-regular"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_below="@id/new_document_title"
        android:id="@+id/card_top"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/card_shadow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/top"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/filename_label"
                android:fontFamily="sans-serif-regular"
                android:padding="8dp"
                android:id="@+id/therapy_textview" />
            <Button
                android:id="@+id/insert_new_file_button"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:fontFamily="sans-serif-regular"
                android:gravity="top"
                android:padding="8dp"
                android:text="@string/upload_label"/>

        </LinearLayout>

        <TextView
            android:layout_below="@id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/note_label_document"
            android:fontFamily="sans-serif-regular"
            android:padding="8dp"
            android:id="@+id/label_note_document" />
        <EditText
            android:layout_below="@id/label_note_document"
            android:id="@+id/note_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minEms="8"/>

    </RelativeLayout>

    <Button
        android:layout_below="@id/card_top"
        android:id="@+id/insert_new_document_button"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:background="@drawable/button_selector"
        android:text="Carica"/>

    <TextView
        android:layout_below="@id/insert_new_document_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="File:"
        android:id="@+id/nomi_file" />

    </RelativeLayout>

</ScrollView>