<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_welcome_message"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"/>-->

    <TextView
        android:id="@+id/user_detail_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:padding="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/patient_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <!--<RelativeLayout
        android:padding="16dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_button"
                android:background="@drawable/button_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/logout"
                android:layout_centerInParent="true"/>

        </RelativeLayout>-->

        <RelativeLayout
            android:padding="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/newclinicalevent_button"
                android:background="@drawable/button_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:layout_centerInParent="true"
                android:text="@string/new_clinicalevent_label"/>

        </RelativeLayout>

        <RelativeLayout
            android:padding="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/clinicalfolder_button"
                android:background="@drawable/button_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:layout_centerInParent="true"
                android:text="@string/clinicalfolder_label"/>

        </RelativeLayout>

        <!--<RelativeLayout
            android:padding="16dp"
            android:layout_centerInParent="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/document_button"
                android:background="@drawable/button_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:layout_centerInParent="true"
                android:text="@string/new_document_label"/>

        </RelativeLayout>-->

        <RelativeLayout
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/visaulizza_diario"
                android:background="@drawable/button_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="Diario"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/test_button"
                android:background="@drawable/button_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/test_label"
                android:layout_centerInParent="true"/>

        </RelativeLayout>



        <RelativeLayout
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/manage_devices"
                android:background="@drawable/button_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/manage_devices_button"
                android:layout_centerInParent="true"/>
        </RelativeLayout>




        <!--<LinearLayout
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/new_game_button"
                android:background="@drawable/button_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/new_game_label"
                android:layout_gravity="center"/>

        </LinearLayout>-->

    </LinearLayout>

    </LinearLayout>

</ScrollView>